Validation bugs fixed